namespace LagerPro.Domain.Enums;

public enum MottakStatus
{
    Registrert = 1,
    Kontrollert = 2,
    Godkjent = 3,
    Avvist = 4
}
