namespace LagerPro.Domain.Enums;

public enum ProdOrdreStatus
{
    Planlagt = 1,
    UnderArbeid = 2,
    Ferdigmeldt = 3,
    Kansellert = 4
}
