namespace LagerPro.Domain.Enums;

public enum TransaksjonsType
{
    Mottak = 1,
    ProduksjonUttak = 2,
    ProduksjonInn = 3,
    Levering = 4,
    Justering = 5,
    Svinn = 6,
    Varetelling = 7
}
