namespace LagerPro.Domain.Enums;

public enum ArtikelType
{
    Ravare = 1,
    Ferdigvare = 2,
    Emballasje = 3
}
