namespace LagerPro.Domain.Enums;

public enum LeveringStatus
{
    Planlagt = 1,
    UnderPlukking = 2,
    Sendt = 3,
    Levert = 4,
    Kansellert = 5
}
